Move to TPM file organization

--- a/cunit-integration/Makefile
+++ b/cunit-integration/Makefile
@@ -24,7 +24,7 @@ include ../tools/common.mk
 TARGET := demo
 FILES := $(TARGET).c
 OBJS := $(TARGET).o
-TIS_OPTS := -kernel-msg-key pp -tis-config-load tis.json -tis-report
+TIS_OPTS := $(TIS_OPTS_SHORT) -kernel-msg-key pp -tis-report
 
 .PHONY: all cunit tis-l1 tis-l1-gui report
 
