--- a/fuzzing/Makefile
+++ b/fuzzing/Makefile
@@ -25,16 +25,15 @@ TARGET := calc
 FILES := test_driver.c boundary.c
 SEEDS := seeds
 TIS_OPTS := -val-profile analyzer -val -I.
-CC := "/usr/bin/afl-gcc"
+COMPILER := "/usr/bin/afl-gcc"
 
 MAX_EXECUTIONS := 50000
 
-.PHONY: all clean tis-fuzz afl afl-easy afl-medium afl-hard afl-easy-smart afl-easy-semi-smart afl-medium-smart afl-medium-semi-smart afl-hard-smart afl-hard-semi-smart
+.PHONY: tis-fuzz afl afl-easy afl-medium afl-hard afl-easy-smart afl-easy-semi-smart afl-medium-smart afl-medium-semi-smart afl-hard-smart afl-hard-semi-smart
 
 help-specific:
 	@echo "make afl            : Runs AFL to produce inputs for tis-fuzz"
 	@echo "make tis-fuzz       : Runs tis-fuzz"
-	@echo "make clean          : Cleans all AFL and tis-fuzz artifacts"
 
 tis-fuzz:
 	mkdir -p work/
@@ -43,7 +42,7 @@ tis-fuzz:
 	chmod a+w work tis-fuzz-results
 	rm -f work/real_input.txt
 	ln -sr seeds/seed1.txt work/real_input.txt
-	tis-analyzer -tis-config-load trustinsoft/tis.json -save tis-fuzz-results/ast.state
+	$(TIS_ANALYZER) -tis-config-load trustinsoft/tis.json -save tis-fuzz-results/ast.state
 	rm work/real_input.txt
 # end of workaround
 	tis-fuzz --ast tis-fuzz-results/ast.state --tis-config trustinsoft/tis.json -i afl-results/ -o tis-fuzz-results --mkfs work/real_input.txt --no-parallel
@@ -57,32 +56,32 @@ afl-medium: afl-medium-semi-smart
 afl-hard: afl-hard-semi-smart
 
 afl-easy-smart:
-	/usr/bin/afl-gcc -DEASY $(FILES) -o $(TARGET)-easy-smart
+	$(COMPILER) -DEASY $(FILES) -o $(TARGET)-easy-smart
 	cp $(SEEDS)-smart/* $(SEEDS)
 	afl-fuzz -E $(MAX_EXECUTIONS) -i $(SEEDS) -o afl-results -- ./$(TARGET)-easy-smart @@
 
 afl-medium-smart:
-	/usr/bin/afl-gcc -DMEDIUM $(FILES) -o $(TARGET)-medium-smart
+	$(COMPILER) -DMEDIUM $(FILES) -o $(TARGET)-medium-smart
 	cp $(SEEDS)-smart/* $(SEEDS)
 	afl-fuzz -i $(SEEDS) -o afl-results -- ./$(TARGET)-medium-smart @@
 
 afl-hard-smart:
-	/usr/bin/afl-gcc -DHARD $(FILES) -o $(TARGET)-hard-smart
+	$(COMPILER) -DHARD $(FILES) -o $(TARGET)-hard-smart
 	cp $(SEEDS)-smart/* $(SEEDS)
 	afl-fuzz -i $(SEEDS) -o afl-results -- ./$(TARGET)-hard-smart @@
 
 afl-easy-semi-smart:
-	/usr/bin/afl-gcc -DEASY $(FILES) -o $(TARGET)-easy-semi-smart
+	$(COMPILER) -DEASY $(FILES) -o $(TARGET)-easy-semi-smart
 	cp $(SEEDS)-semi-smart/* $(SEEDS)
 	afl-fuzz -E $(MAX_EXECUTIONS) -i $(SEEDS) -o afl-results -- ./$(TARGET)-easy-semi-smart @@
 
 afl-medium-semi-smart:
-	/usr/bin/afl-gcc -DMEDIUM $(FILES) -o $(TARGET)-medium-semi-smart
+	$(COMPILER) -DMEDIUM $(FILES) -o $(TARGET)-medium-semi-smart
 	cp $(SEEDS)-semi-smart/* $(SEEDS)
 	afl-fuzz -i $(SEEDS) -o afl-results -- ./$(TARGET)-medium-semi-smart @@
 
 afl-hard-semi-smart:
-	/usr/bin/afl-gcc -DHARD $(FILES) -o $(TARGET)-hard-semi-smart
+	$(COMPILER) -DHARD $(FILES) -o $(TARGET)-hard-semi-smart
 	cp $(SEEDS)-semi-smart/* $(SEEDS)
 	afl-fuzz -i $(SEEDS) -o afl-results -- ./$(TARGET)-hard-semi-smart @@
 
