Follow TPM file organization

--- a/target-awareness/Makefile
+++ b/target-awareness/Makefile
@@ -23,8 +23,8 @@ include ../tools/common.mk
 
 TARGET := target
 FILES := $(TARGET).c
-TIS_OPTS_X64 := -tis-config-load trustinsoft/tis-x64.json -tis-report
-TIS_OPTS_ARM32 := -tis-config-load trustinsoft/tis-arm32.json -tis-report
+TIS_OPTS_X64 := -tis-config-load $(CONFIG_DIR)/tis-x64.json -tis-report-directory $(RESULTS_DIR) -tis-report
+TIS_OPTS_ARM32 := -tis-config-load $(CONFIG_DIR)/tis-arm32.json -tis-report-directory $(RESULTS_DIR) -tis-report
 
 .PHONY: all test report
 
