--- a/caesar-c/Makefile
+++ b/caesar-c/Makefile
@@ -22,6 +22,7 @@ help: help-specific help-generic
 
 include ../tools/common.mk
 
+TARGET := caesar
 FILES := test_driver.c caesar.c
 TIS_OPTS = $(TIS_OPTS_SHORT) -tis-report
 
@@ -37,8 +38,14 @@ help-specific:
 test:
 	@echo -e "$(FONT_CYAN)$(COMPILER) -I. -fprofile-arcs -ftest-coverage $(FILES) -o caesar && ./caesar$(FONT_RESET)"
 	@$(COMPILER) -I. -fprofile-arcs -ftest-coverage $(FILES) -o caesar && ./caesar
-	@echo ""
+
 	@echo -e "$(FONT_CYAN)gcov caesar.c $(FONT_RESET)"
+	@# With gcc 11 and higher the coverage files have a different name.
+	@# Temporarily fixing by changing file name to the expected name
+	@if [ $(GCC_VERSION) -ge 11 ]; then \
+	mv $(TARGET)-$(TARGET).gcno $(TARGET).gcno; \
+	mv $(TARGET)-$(TARGET).gcda $(TARGET).gcda; \
+	fi
 	@gcov caesar.c
 
 tis-l1-run:
